# quicklog

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
quicklog/: __init__.py  __main__.py
tests/: test_quicklog.py
